<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvBooked"
        android:padding="17dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/booked"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvFavouriteStyles"
        android:padding="17dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/favourite_styles"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvFavouriteSaloons"
        android:padding="17dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/favourite_saloons"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvDetails"
        android:padding="17dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/my_details"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvPayment"
        android:padding="17dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/payment_methods"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvPreferences"
        android:padding="17dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/preferences"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvHelp"
        android:padding="17dp"
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/help"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvLogOut"
        android:layout_marginTop="50dp"
        android:padding="17dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/log_out"
        android:textSize="18sp"/>
</LinearLayout>