<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:layout_gravity="bottom"
    android:background="@drawable/curved_sheet"
    android:paddingBottom="10dp">
    <TextView
        android:id="@+id/tvStyle"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/style_name"
        android:textSize="35sp"/>
    <TextView
        android:id="@+id/tvCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:textSize="23sp"/>
    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="23sp"/>

    <TextView
        android:id="@+id/tvCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textSize="23sp" />

    <ImageView
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_baseline_qr_code_24"
        android:contentDescription="@string/code"
        android:layout_marginBottom="15dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoToStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:background="@drawable/round_button"
        android:text="@string/go_to_style"
        android:textSize="23sp"
        android:layout_margin="8dp"/>

</LinearLayout>