<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:layout_gravity="bottom"
    android:background="@drawable/curved_sheet"
    android:paddingBottom="10dp">
    <TextView
        android:id="@+id/tvSaloon"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/style_name"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tvStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/style_name"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tvCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:textSize="30sp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReview"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/light_grey"
        android:text="@string/review"
        android:textSize="20sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoToStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/teal_200"
        android:text="Go To Style"
        android:textSize="30sp"
        android:layout_margin="8dp"/>

</LinearLayout>