<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterStyleFragment"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvNoStyles"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_styles_found"
        android:textSize="25sp"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/llStyles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/styles"
            android:padding="10dp"
            android:textSize="20sp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llSaloons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/border">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saloons"
            android:padding="10dp"
            android:textSize="20sp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSaloons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tvAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/see_all_results_for"
        android:padding="10dp"
        android:textSize="20sp"/>
</LinearLayout>